--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: .
 
     steps:
       - uses: actions/checkout@v3
@@ -19,6 +21,4 @@ jobs:
         run: pip install pytest
 
       - name: Run Governance Spine Tests
-        run: |
-          export PYTHONPATH=$PYTHONPATH:.
-          pytest tests/test_step6.py tests/test_step7.py tests/test_step8.py tests/test_step9.py
+        run: pytest tests/test_step6.py tests/test_step7.py tests/test_step8.py tests/test_step9.py
